force-app/main/default/objects/Campsite__c/Campsite__c.object-meta.xml
<CustomObject>
    <label>Campsite</label>
    <pluralLabel>Campsites</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Campsite Name</label>
    </nameField>
    <description>Campsites available for booking</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>