force-app/main/default/objects/Campsite__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Restrooms</fullName>
            </value>
            <value>
                <fullName>Showers</fullName>
            </value>
            <value>
                <fullName>Picnic Tables</fullName>
            </value>
            <value>
                <fullName>Fire Pits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>