force-app/main/default/objects/Campsite__c/fields/Daily_Fee__c.field-meta.xml
<CustomField>
    <fullName>Daily_Fee__c</fullName>
    <description>Daily fee for the campsite</description>
    <label>Daily Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>