force-app/main/default/objects/Campsite__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <description>Facilities available at the campsite</description>
    <label>Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>