force-app/main/default/objects/Campsite__c/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <description>Maximum number of people allowed at the campsite</description>
    <label>Max Capacity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>