force-app/main/default/objects/Campsite__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <description>Trail associated with this campsite</description>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Campsites</relationshipLabel>
    <relationshipName>Campsites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>